--- a/style.css
+++ b/style.css
@@ -9,12 +9,18 @@ div main {
   color: blue;
   background-color: #ffff0070;
   border-top: solid;
-  border-color: #ffff00;
+  border-color: #ffc800;
 }
 div main h1 {
   text-align: center;
 }
 
-.featured {
+.feature {
   color: red;
+  border-left: solid;
+  border-color: #ffc800;
+}
+
+div main hr {
+  border-top: 1px solid aqua;
 }
