--- a/style.css
+++ b/style.css
@@ -14,6 +14,14 @@ div main {
 div main h1 {
   text-align: center;
 }
+div main img {
+  border-radius: 5%;
+  box-shadow: 10px 10px rgba(0, 0, 0, 0.252);
+}
+.imagecredit {
+  color: gray;
+  text-align: center;
+}
 
 .feature {
   color: red;
